--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "classnames": "^2.3.1",
     "dotenv": "^8.2.0",
     "emailjs-com": "^3.2.0",
