--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
   "name": "portfolio-blog",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "autoprefixer": "^9.8.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.0.2",
-    "bootstrap-icons": "^1.5.0",
+    "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
     "emailjs-com": "^3.2.0",
-    "jquery": "^3.6.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^6.0.1",
+    "postcss-loader": "^3.0.0",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-loadingg": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "sass-loader": "^10.2.0",
+    "style-loader": "^1.3.0",
     "styled-components": "^5.3.0",
     "typed.js": "^2.0.12",
     "web-vitals": "^1.1.2"
@@ -53,7 +63,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@welldone-software/why-did-you-render": "^6.2.0"
-  }
+  "devDependencies": {}
 }
