--- a/package.json
+++ b/package.json
@@ -63,5 +63,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-alice-carousel": "^2.5.1"
+  }
 }
